# statslogger-service

./: Cargo.toml  Procfile  README.md  docker-compose.yaml
migrations/2020-04-11-100002_create_stats/: down.sql  up.sql
src/: main.rs  schema.rs
