[package]
name = "statslogger-service"
description = "Service to receive and log records from statslogger"
version = "0.1.0"
authors = ["Chris Atkin <atkinchris@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.0"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "serde_json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
